--- a/app/views/testing/testing.html.erb
+++ b/app/views/testing/testing.html.erb
@@ -1,4 +1,4 @@
-<h1 align='center'>Just Testing!</h1>
+<h1 align='center'>Just Testing!!</h1>
 <h3 align='center'>The students in the database are:</h3><br>
 <% @students.each do |student| %>
 <p align='center'><strong>Name:</strong> <%= student.name%> <strong>Roll No:</strong><%= student.rollno%></p>
