--- a/app/views/accounts/signupStudent.html.erb
+++ b/app/views/accounts/signupStudent.html.erb
@@ -1,7 +1,7 @@
 <%= form_with scope: :student, url: create_student_path, local: true do |form| %>
-  <% if @student.errors.any? %>
+  <% if @student && @student.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
+      <h2><%= pluralize(@student.errors.count, "error") %> prohibited this student from being saved:</h2>
 
       <ul>
         <% @student.errors.full_messages.each do |message| %>
