--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -12,6 +12,7 @@
   --ion-background-color: #a179d5 !important;
   border-radius: 4px;
     }
+
     ion-item.active.item:hover {
   --ion-background-color: #b88eed !important;
   border-radius: 4px;
@@ -25,6 +26,9 @@
     {
     --ion-background-color: #b88eed;
         border-radius: 4px; 
+    }
+    ion-button{
+        --ion-background-color: #8f15f4;
     }
     ion-list.side_list
     {
@@ -46,6 +50,47 @@
     {
         color: grey;
     }
+    
+    :root {
+
+    --input-color: #99A3BA;
+    --input-border: #CDD9ED;
+    --input-background: #fff;
+    --input-placeholder: #CBD1DC;
+
+    --input-border-focus: #275EFE;
+
+}
+
+.form-field {
+    display: block;
+    width: 100%;
+    padding: 8px 16px;
+    line-height: 25px;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: inherit;
+    border-radius: 6px;
+    -webkit-appearance: none;
+    color: var(--input-color);
+    border: 1px solid var(--input-border);
+    background: var(--input-background);
+    transition: border .3s ease;
+    &::placeholder {
+        color: var(--input-placeholder);
+    }
+    &:focus {
+        outline: none;
+        border-color: var(--input-border-focus);
+    }
+}
+
+
+
+
+
+
+
 
   </style>
 </head>
@@ -122,7 +167,7 @@
             <ion-col>
                 <ion-row style="height: 63px; border-bottom: 1px solid rgba(0, 0, 0, 0.2)">
                     <ion-col size='3'>
-                        <label style="position: relative; left: 45px; top: 20px; weight: 500; font-weight: 400; font-size: 19px; color: grey">MESS MANAGEMENT</label>
+                        <label style="position: relative; left: 300px; top: 20px; weight: 500; font-weight: 400; font-size: 19px; color: grey">MESS MANAGEMENT</label>
                     </ion-col>
                     <ion-col offset='6' size='3'>
                         <a style="color: grey; position: relative; left: 45px; top: 20px; font-size: 16px;">Change Password</a>
@@ -163,13 +208,72 @@
                     <h3>Mess Cut</h3>
                     <p>Mess cut data goes here</p>
                     </div>
-                    <div id="extra" class="tabcontent" style="display:none;">
-                    <h3>Extras</h3>
-                    <p>Extra data goes here</p>
-                    </div>
+
+
+                    <div id="extra" class="tabcontent" style="position: relative;left: 50px">
+                        <h1 style="position:absolute;left:0px">Add Extra</h1><br> <br><br><br>
+                         <ion-card style = "width: 700px">
+                            
+                            <ion-card-content>
+
+                               
+                    <%= form_with scope: :extra, url: create_extra_path, local: true do |form| %>
+
+                     <ion-list lines="none" class="line-input">
+                        <ion-item>
+                            <ion-label>
+                             <%= form.label :Date %>
+                         </ion-label>
+                         <ion-label>
+                            <%= form.date_field :date, class:'form-field' %>
+                         </ion-label>   
+                        </ion-item>
+                                    
+                        <ion-item>
+                            <ion-label>
+                             <%= form.label :rollno %>
+                         </ion-label>
+                         <ion-label>
+                             <%= form.text_field :rollno, class:'form-field'%> 
+                         </ion-label>   
+                        </ion-item>
+
+                        
+
+                        <ion-item>
+                            <ion-label>
+                             <%= form.label :item %>
+                         </ion-label>
+                         <ion-label>
+                             <%= form.text_field :item, class:'form-field' %> 
+                         </ion-label>   
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label>
+                             <%= form.label :price %>
+                         </ion-label>
+                         <ion-label>
+                             <%= form.text_field :price, class:'form-field' %> 
+                         </ion-label>   
+                        </ion-item>
+                        </ion-list>
+                        <br>
+  <%= form.submit :value => "ADD TO EXTRA", :class => 'button', :style => "width:600px;height:40px;background-color: #8f15f4;color:white;" %>
+  </ion-card-content>
+  </ion-card>
+  <br>
+  <br>
+                            <br>
+
+                      
+<% end %>
+                   
+
                     <div id="fee" class="tabcontent" style="display:none;">
                     <h3>Fee</h3>
                     <p>Updates about mess fee happens here</p>
+
                     </div>
                 </div>
                     </ion-col>
