--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <%= csrf_meta_tag %>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grid</title>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/ionic.esm.js"></script>
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/ionic.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@next/css/ionic.bundle.css"/>
+  <script type="module">
+    import { modalController } from 'https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/index.esm.js';
+    window.modalController = modalController;
+    import { alertController } from 'https://cdn.jsdelivr.net/npm/@ionic/core@next/dist/ionic/index.esm.js';
+    window.alertController = alertController;
+  </script>
   <style>
+
+    .alertbuttonyes{
+  color: red !important;
+}
+.alertbuttonno{
+  color: #8f15f4 !important;
+}
+
+    .addstaff .modal-wrapper {
+  height: 275px !important;
+  width: 300px !important;
+  position: relative;
+  bottom: 150px;
+  left: 50px;
+
+}
+
     ion-item.side_tabs.item:hover {
   --ion-background-color: #a179d5 !important;
   border-radius: 4px;
@@ -140,8 +164,8 @@
                     <div id="student_list" class="tabcontent" style="display:none;">
                         <ion-grid>
                             <ion-row>
-                                <ion-col size=5 offset=3.5>
-                                    <h3 style="text-align: center">Student List</h3><br>
+                                <ion-col size=5 offset=3>
+                                    <h3 style="text-align: center; padding-right:34px">Student List</h3><br>
                                     <div id="search_section">
                                     <ion-row><ion-col size=6>
                                     <ion-searchbar placeholder="Type Name" id="nameSearchBar" onInput="filterStudentsByName()"></ion-searchbar></ion-col>
@@ -155,8 +179,18 @@
                     </div>
 
                     <div id="staff_list" class="tabcontent" style="display:none;">
-                    <h3>Staff List</h3>
-                    <p>List of all staff goes here</p> 
+                        <ion-grid>
+                    <ion-row>
+                        <ion-col offset=3 size=6>
+                            <h3 style="text-align: center;">Staff List 
+                            </h3><br>
+                                <div style="text-align: center;"><ion-button style="--ion-color-primary: #8f15f4;margin-right: 10px" id="addbutton">Add Staff<ion-icon slot="end" name='add'></ion-icon></ion-button></div>
+                            <div id="stafflist"><ion-spinner style="position:relative; left: 50px; top:70px"></ion-spinner></div>
+
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+
                     </div>
 
                     <div id="messcut" class="tabcontent" style="display:none;">
@@ -181,6 +215,91 @@
   </ion-app>
 </body>
 <script>
+
+
+customElements.define('modal-content', class ModalContent extends HTMLElement {
+      connectedCallback() {
+        this.innerHTML = `
+          <ion-header translucent>
+            <ion-toolbar>
+              <ion-title style="text-align: center; padding-left: 70px;">Add Staff</ion-title>
+              <ion-buttons slot="end">
+                <ion-button slot="icon-only" onclick="dismissModal()"><ion-icon name="close"></ion-icon></ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content fullscreen>
+          <ion-item style="--ion-color-primary:  #8f15f4">
+          <ion-label position="floating">Staff Name</ion-label>
+            <ion-input id='staffname' required="true"></ion-input>
+            </ion-item>
+            <ion-item style="--ion-color-primary:  #8f15f4">
+            <ion-label position="floating">Mobile No</ion-label>
+            <ion-input type="number" id='staffno' required="true"></ion-input>
+            </ion-item><br>
+            <div style="text-align:center;">
+            <ion-button style="--ion-color-primary:  #8f15f4;self-align:center;" onClick="createStaff()">Add Staff</ion-button>
+            </div>
+          </ion-content>
+        `;
+      }
+    });
+
+    let currentModal = null;
+    const button = document.getElementById('addbutton');
+    button.addEventListener('click', createModal);
+
+    async function createModal() {
+      const modal = await modalController.create({
+        component: 'modal-content',
+        cssClass: 'addstaff'
+      });
+
+      await modal.present();
+      currentModal = modal;
+    }
+
+    function createStaff()
+    {
+        var token = document.querySelector('meta[name="csrf-token"]').content;
+        var xmlhttp, myObj;
+        name=document.getElementById('staffname').value;
+        phoneno=document.getElementById('staffno').value;
+    xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+        myObj = JSON.parse(this.responseText);
+        if(myObj.added)
+        {
+            dismissModal();
+            getStaffs();
+        }
+        else
+        {
+            alert(myObj.errors);
+        }
+        }
+};
+xmlhttp.open("POST", "/createstaff", true);
+xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+xmlhttp.setRequestHeader('X-CSRF-Token', token);
+xmlhttp.send("staff[name]="+name+"&staff[phoneno]="+phoneno);
+
+    }
+
+    function dismissModal() {
+      if (currentModal) {
+        currentModal.dismiss().then(() => { currentModal = null; });
+      }
+    }
+
+
+
+
+
+
+
+
 function viewOption(evt, option) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
@@ -196,6 +315,10 @@ function viewOption(evt, option) {
   if (option=="student_list")
   {
     getStudents();
+  }
+  if (option=="staff_list")
+  {
+    getStaffs();
   }
 }
 
@@ -231,6 +354,79 @@ xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 xmlhttp.send();
 
 }
+
+
+function getStaffs()
+{
+    var obj, dbParam, xmlhttp, myObj, x, txt = "";
+    xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+        myObj = JSON.parse(this.responseText);
+        if(myObj.length==0)
+        {
+            txt+="<p style='text-align: center;'>There are no Staffs in this mess currently</p>"
+            document.getElementById("stafflist").innerHTML = txt;
+        }
+        else
+        {
+        txt += "<p id='noMatch' style='text-align:center;display:none;'>No matching students</p><ion-card id='students_card'><ion-list>"
+        for (x in myObj) {
+            txt += "<ion-item class='student_item' lines='none' href=#><ion-icon name='person' style='color: #8f15f4; margin-bottom: 10px'></ion-icon><ion-grid><ion-row><ion-col size='6' ><label class='student_name' style='padding-left: 15px; font-size: 17px; font-weight: 500;'>" + myObj[x].name + "</label></ion-col><ion-col size='3.5' offset='1.3' ><ion-icon style='color: #8f15f4; font-size:23px;' name='call'></ion-icon><label style='padding-left: 7px;' class='student_roll_no'>"+myObj[x].phoneno+"</label></ion-col><ion-col><ion-buttons><ion-button onClick='deleteAlert("+myObj[x].id+")' slot='icon-only'><ion-icon name='trash' style='color:red;font-size: 25px;'></ion-icon></ion-button></ion-buttons></ion-col></ion-row></ion-item>";
+        }
+    txt += "</ion-list></ion-card></ion-grid>";  
+    document.getElementById("stafflist").innerHTML = txt;
+}
+  }
+};
+xmlhttp.open("GET", "/staffdata", true);
+xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+xmlhttp.send();
+
+}
+
+async function deleteAlert(id) {
+      const alert = await alertController.create({
+        header: 'Are you sure to delete this staff?',
+        buttons: [
+        {
+          text: 'Yes',
+          cssClass: 'alertbuttonyes',
+          handler: () => {
+            deleteStaff(id);
+          }
+        }, {
+          text: 'No',
+          cssClass: 'alertbuttonno'
+        }
+      ]
+      });
+
+      await alert.present();
+    }
+
+function deleteStaff(id)
+{
+    var token = document.querySelector('meta[name="csrf-token"]').content;
+    var obj, dbParam, xmlhttp, myObj, x, txt = "";
+    xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+        myObj = JSON.parse(this.responseText);
+        if(myObj.deleted)
+        {
+            getStaffs();
+        }
+        
+  }
+};
+xmlhttp.open("POST", "/deletestaff", true);
+xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+xmlhttp.setRequestHeader('X-CSRF-Token', token);
+xmlhttp.send("staff[id]="+id);
+
+}
+
 
 
 function filterStudentsByName() {
