--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -181,7 +181,7 @@
                     <div id="staff_list" class="tabcontent" style="display:none;">
                         <ion-grid>
                     <ion-row>
-                        <ion-col offset=3 size=6>
+                        <ion-col offset=3 size=5>
                             <h3 style="text-align: center;">Staff List 
                             </h3><br>
                                 <div style="text-align: center;"><ion-button style="--ion-color-primary: #8f15f4;margin-right: 10px" id="addbutton">Add Staff<ion-icon slot="end" name='add'></ion-icon></ion-button></div>
@@ -358,6 +358,7 @@ xmlhttp.send();
 
 function getStaffs()
 {
+    document.getElementById("stafflist").innerHTML = '<ion-spinner style="position:relative; left: 50px; top:70px"></ion-spinner>';   
     var obj, dbParam, xmlhttp, myObj, x, txt = "";
     xmlhttp = new XMLHttpRequest();
     xmlhttp.onreadystatechange = function() {
@@ -372,7 +373,7 @@ function getStaffs()
         {
         txt += "<p id='noMatch' style='text-align:center;display:none;'>No matching students</p><ion-card id='students_card'><ion-list>"
         for (x in myObj) {
-            txt += "<ion-item class='student_item' lines='none' href=#><ion-icon name='person' style='color: #8f15f4; margin-bottom: 10px'></ion-icon><ion-grid><ion-row><ion-col size='6' ><label class='student_name' style='padding-left: 15px; font-size: 17px; font-weight: 500;'>" + myObj[x].name + "</label></ion-col><ion-col size='3.5' offset='1.3' ><ion-icon style='color: #8f15f4; font-size:23px;' name='call'></ion-icon><label style='padding-left: 7px;' class='student_roll_no'>"+myObj[x].phoneno+"</label></ion-col><ion-col><ion-buttons><ion-button onClick='deleteAlert("+myObj[x].id+")' slot='icon-only'><ion-icon name='trash' style='color:red;font-size: 25px;'></ion-icon></ion-button></ion-buttons></ion-col></ion-row></ion-item>";
+            txt += "<ion-item class='student_item' lines='none' href=#><ion-icon name='person' style='color: #8f15f4;'></ion-icon><ion-grid><ion-row><ion-col size='6'><label class='student_name' style='padding-left: 15px; position:relative; top: 4px;font-size: 17px; font-weight: 500;'>" + myObj[x].name + "</label></ion-col><ion-col size='3.5' offset='1.3'  ><ion-icon style='position:relative; top: 4px;color: #8f15f4; font-size:23px;' name='call'></ion-icon><label style='padding-left: 7px;' class='student_roll_no'>"+myObj[x].phoneno+"</label></ion-col><ion-col size='1.2'><ion-buttons><ion-button onClick='deleteAlert("+myObj[x].id+")' slot='icon-only'><ion-icon name='trash' style='color:red;font-size: 25px;'></ion-icon></ion-button></ion-buttons></ion-col></ion-row></ion-item>";
         }
     txt += "</ion-list></ion-card></ion-grid>";  
     document.getElementById("stafflist").innerHTML = txt;
